tests/predator-regre/test-0158.err
test-0158.c:23:20: note: writing heap graph to 'test-0158.c-23-0000.dot'...
test-0158.c:26:19: warning: memory leak detected while assigning a variable on stack
test-0158.c:29:9: error: invalid free()
test-0158.c:29:9: note: the value being freed is a result of an unsupported data reinterpretation
